--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -54,6 +54,34 @@ a{
 a:hover{
   color: #ff8000;
 }
+ul{
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+li{
+  margin-top: 1rem;
+}
+button {
+  padding: 1rem;
+  border-radius: 0.5rem;
+  border: 0.1rem #a4a4a4 solid;
+  font-size: 1.6rem;
+  font-family: Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #f8f8f8;
+  cursor: pointer;
+}
+button:hover{
+  border: 0.1rem #404040 solid;
+}
+button.primary{
+  background-color: #f0c040;
+}
+button.block{
+  width: 100%;
+}
 /* Header */
 header a{
   color: #ffffff;
@@ -73,13 +101,31 @@ a.brand{
 .row.center{
   justify-content: center;
 }
+.row.top{
+  align-items: flex-start;
+}
+.col-1{
+  flex: 1 1 25rem;
+}
+.col-2{
+  flex: 2 1 50rem;
+}
 
 /* Image */
 img {
   border-radius: 0.5rem;
 }
 img.medium{
+  float: left;
+  height: 250px;
+  object-fit: cover;
   max-width: 29rem;
+  width: 100%;
+}
+img.large{
+  float: left;
+  height: 400px;
+  object-fit: cover;
   width: 100%;
 }
 
@@ -98,5 +144,13 @@ img.medium{
 
 .card-body > *{
   margin-bottom: 0.5rem;
+}
+
+/* Alert */
+.success {
+  color: #20a020;
+}
+.error {
+  color: #a02020;
 }
 
